--- a/.github/workflows/release-python-gpu.yml
+++ b/.github/workflows/release-python-gpu.yml
@@ -33,7 +33,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           submodules: true
-          
+
       - name: Show files
         run: ls 
         shell: bash
@@ -57,6 +57,14 @@ jobs:
           vulkan-query-version: 1.3.204.0
           vulkan-components: Vulkan-Headers, Vulkan-Loader
           vulkan-use-cache: true
+      
+      - name: cd dir
+        run: cd ncnn-python-gpu
+        shell: bash
+        
+      - name: Show files
+        run: ls 
+        shell: bash
 
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.15.0
