--- a/.github/workflows/release-python-gpu.yml
+++ b/.github/workflows/release-python-gpu.yml
@@ -34,61 +34,47 @@ jobs:
         with:
           submodules: true
 
-      # - uses: actions/setup-python@v4
-      #   with:
-      #     python-version: '3.x'
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
   
-      # - name: brew uninstall libomp
-      #   if: matrix.os == 'macos-latest'
-      #   run: |
-      #     brew uninstall --ignore-dependencies libomp
-
-      # - name: Prepare Vulkan SDK
-      #   uses: humbletim/setup-vulkan-sdk@v1.2.0
-      #   with:
-      #     vulkan-query-version: 1.3.204.0
-      #     vulkan-components: Vulkan-Headers, Vulkan-Loader
-      #     vulkan-use-cache: true
-      
-      - name: Show files
-        run: ls 
-        shell: bash
-
-      - name: Enter submodule directory
+      - name: brew uninstall libomp
+        if: matrix.os == 'macos-latest'
         run: |
-          cd ncnn-python-gpu
-          ls
-        shell: bash
+          brew uninstall --ignore-dependencies libomp
+
+      - name: Prepare Vulkan SDK
+        uses: humbletim/setup-vulkan-sdk@v1.2.0
+        with:
+          vulkan-query-version: 1.3.204.0
+          vulkan-components: Vulkan-Headers, Vulkan-Loader
+          vulkan-use-cache: true
+      
+
+      - name: Build wheels
+        uses: pypa/cibuildwheel@v2.15.0
+        env:
+          CIBW_ARCHS_MACOS: ${{ matrix.arch }}
+          CIBW_ARCHS_LINUX: ${{ matrix.arch }}
+          CIBW_ARCHS_WINDOWS: ${{ matrix.arch }}
+          CIBW_BUILD: ${{ matrix.build }}
+          CIBW_BUILD_VERBOSITY: 1
+          CIBW_ENVIRONMENT: CMAKE_BUILD_PARALLEL_LEVEL=2
+          NCNN_VULKAN: 'TRUE'
+        with:
+          pacakge-dir: ./ncnn-python-gpu
+          output-dir: wheelhouse
 
       - name: Show files
-        run: ls 
-        shell: bash
-      
-      - name: Show files in dir
-        run: ls -lh ncnn-python-gpu
+        run: ls -lh wheelhouse
         shell: bash
 
-      # - name: Build wheels
-      #   uses: pypa/cibuildwheel@v2.15.0
-      #   env:
-      #     CIBW_ARCHS_MACOS: ${{ matrix.arch }}
-      #     CIBW_ARCHS_LINUX: ${{ matrix.arch }}
-      #     CIBW_ARCHS_WINDOWS: ${{ matrix.arch }}
-      #     CIBW_BUILD: ${{ matrix.build }}
-      #     CIBW_BUILD_VERBOSITY: 1
-      #     CIBW_ENVIRONMENT: CMAKE_BUILD_PARALLEL_LEVEL=2
-      #     NCNN_VULKAN: 'TRUE'
+      - name: Verify clean directory
+        run: git diff --exit-code
+        shell: bash
 
-      # - name: Show files
-      #   run: ls -lh wheelhouse
-      #   shell: bash
-
-      # - name: Verify clean directory
-      #   run: git diff --exit-code
-      #   shell: bash
-
-      # - name: Upload wheels
-      #   uses: actions/upload-artifact@v3
-      #   with:
-      #     path: wheelhouse/*.whl
+      - name: Upload wheels
+        uses: actions/upload-artifact@v3
+        with:
+          path: wheelhouse/*.whl
         
