--- a/.github/workflows/release-python-gpu.yml
+++ b/.github/workflows/release-python-gpu.yml
@@ -50,31 +50,37 @@ jobs:
           vulkan-components: Vulkan-Headers, Vulkan-Loader
           vulkan-use-cache: true
       
-
-      - name: Build wheels
-        uses: pypa/cibuildwheel@v2.15.0
-        env:
-          CIBW_ARCHS_MACOS: ${{ matrix.arch }}
-          CIBW_ARCHS_LINUX: ${{ matrix.arch }}
-          CIBW_ARCHS_WINDOWS: ${{ matrix.arch }}
-          CIBW_BUILD: ${{ matrix.build }}
-          CIBW_BUILD_VERBOSITY: 1
-          CIBW_ENVIRONMENT: CMAKE_BUILD_PARALLEL_LEVEL=2
-          NCNN_VULKAN: 'TRUE'
-        with:
-          package-dir: ./ncnn-python-gpu
-          output-dir: wheelhouse
-
-      - name: Show files
-        run: ls -lh wheelhouse
+      - name: Test Vulkan SDK Install
         shell: bash
+        run: |
+          echo "Vulkan SDK Version=='$VULKAN_SDK_VERSION'"
+          echo "VULKAN_SDK=='$VULKAN_SDK'"
+          glslangValidator --version
 
-      - name: Verify clean directory
-        run: git diff --exit-code
-        shell: bash
+      # - name: Build wheels
+      #   uses: pypa/cibuildwheel@v2.15.0
+      #   env:
+      #     CIBW_ARCHS_MACOS: ${{ matrix.arch }}
+      #     CIBW_ARCHS_LINUX: ${{ matrix.arch }}
+      #     CIBW_ARCHS_WINDOWS: ${{ matrix.arch }}
+      #     CIBW_BUILD: ${{ matrix.build }}
+      #     CIBW_BUILD_VERBOSITY: 1
+      #     CIBW_ENVIRONMENT: CMAKE_BUILD_PARALLEL_LEVEL=2
+      #     NCNN_VULKAN: 'TRUE'
+      #   with:
+      #     package-dir: ./ncnn-python-gpu
+      #     output-dir: wheelhouse
 
-      - name: Upload wheels
-        uses: actions/upload-artifact@v3
-        with:
-          path: wheelhouse/*.whl
+      # - name: Show files
+      #   run: ls -lh wheelhouse
+      #   shell: bash
+
+      # - name: Verify clean directory
+      #   run: git diff --exit-code
+      #   shell: bash
+
+      # - name: Upload wheels
+      #   uses: actions/upload-artifact@v3
+      #   with:
+      #     path: wheelhouse/*.whl
         
