--- a/.github/workflows/release-python-gpu.yml
+++ b/.github/workflows/release-python-gpu.yml
@@ -33,6 +33,14 @@ jobs:
       - uses: actions/checkout@v3
         with:
           submodules: true
+      
+      - name: init submodules
+        shell: bash
+        run: |
+          cd ncnn-python-gpu
+          git submodule update --init
+          cd python
+          git submodule update --init
 
       - uses: actions/setup-python@v4
         with:
@@ -64,11 +72,7 @@ jobs:
       #     echo "Vulkan SDK Version=='$VULKAN_SDK_VERSION'"
       #     echo "VULKAN_SDK=='$VULKAN_SDK'"
 
-      # - name: init submodule
-      #   shell: bash
-      #   run: |
-      #     cd ncnn-python-gpu
-      #     git submodule
+
       
       
 
