--- a/.github/workflows/release-python-gpu.yml
+++ b/.github/workflows/release-python-gpu.yml
@@ -82,7 +82,7 @@ jobs:
           CIBW_BUILD_VERBOSITY: 1
           CIBW_ENVIRONMENT: CMAKE_BUILD_PARALLEL_LEVEL=2 
           NCNN_VULKAN: 'TRUE'
-          VULKAN_SDK: '$VULKAN_SDK'
+          VULKAN_SDK: $VULKAN_SDK
         with:
           package-dir: ./ncnn-python-gpu
           output-dir: wheelhouse
