--- a/.github/workflows/release-python-gpu.yml
+++ b/.github/workflows/release-python-gpu.yml
@@ -5,6 +5,8 @@ on:
     branches: [main]
     # tags:
     #   - '*'
+    paths:
+      VULKAN_SDK/*
 
 jobs:
   build_wheels:
@@ -72,12 +74,6 @@ jobs:
           echo "Vulkan SDK Version=='$VULKAN_SDK_VERSION'"
           echo "VULKAN_SDK=='$VULKAN_SDK'"
 
-      - name: add env
-        shell: bash
-        run: |
-          echo "NCNN_VULKAN='TRUE'" >> $GITHUB_ENV
-          echo "VULKAN_SDK='$VULKAN_SDK'" >> $GITHUB_ENV
-
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.15.0
         env:
@@ -87,8 +83,7 @@ jobs:
           CIBW_BUILD: ${{ matrix.build }}
           CIBW_BUILD_VERBOSITY: 1
           CIBW_ENVIRONMENT: CMAKE_BUILD_PARALLEL_LEVEL=2 
-          # NCNN_VULKAN: 'TRUE'
-          # VULKAN_SDK: $VULKAN_SDK
+          NCNN_VULKAN: 'TRUE'
         with:
           package-dir: ./ncnn-python-gpu
           output-dir: wheelhouse
