--- a/.github/workflows/release-python-gpu.yml
+++ b/.github/workflows/release-python-gpu.yml
@@ -5,8 +5,7 @@ on:
     branches: [main]
     # tags:
     #   - '*'
-    paths:
-      VULKAN_SDK/*
+
 
 jobs:
   build_wheels:
@@ -82,8 +81,8 @@ jobs:
           CIBW_ARCHS_WINDOWS: ${{ matrix.arch }}
           CIBW_BUILD: ${{ matrix.build }}
           CIBW_BUILD_VERBOSITY: 1
-          CIBW_ENVIRONMENT: CMAKE_BUILD_PARALLEL_LEVEL=2 
-          NCNN_VULKAN: 'TRUE'
+          CIBW_ENVIRONMENT: CMAKE_BUILD_PARALLEL_LEVEL=2 NCNN_VULKAN='TRUE' "VULKAN_SDK=='$VULKAN_SDK'"
+          
         with:
           package-dir: ./ncnn-python-gpu
           output-dir: wheelhouse
