--- a/.github/workflows/release-python-gpu.yml
+++ b/.github/workflows/release-python-gpu.yml
@@ -67,6 +67,14 @@ jobs:
           vulkan-components: Vulkan-Headers, Vulkan-Loader
           vulkan-use-cache: true
       
+      - name: check Vulkan dir
+        shell: bash
+        run: |
+            cd VULKAN_SDK
+            ls 
+            cd 1.3.204.0
+            ls 
+
       - name: Test Vulkan SDK Install
         shell: bash
         run: |
