--- a/.github/workflows/release-python-gpu.yml
+++ b/.github/workflows/release-python-gpu.yml
@@ -66,47 +66,44 @@ jobs:
           vulkan-query-version: 1.3.204.0
           vulkan-components: Vulkan-Headers, Vulkan-Loader
           vulkan-use-cache: true
-      
-      - name: check Vulkan dir
-        shell: bash
-        run: |
-            cd VULKAN_SDK
-            ls 
-            cd 1.3.204.0
-            ls 
 
       - name: Test Vulkan SDK Install
         shell: bash
         run: |
           echo "Vulkan SDK Version=='$VULKAN_SDK_VERSION'"
           echo "VULKAN_SDK=='$VULKAN_SDK'"
-          echo "Vulkan_LIBRARY=='$Vulkan_LIBRARY'"
-          echo "Vulkan_INCLUDE_DIR=='$Vulkan_INCLUDE_DIR'"
+          echo "Vulkan_LIBRARY=='$VULKAN_SDK/lib'"
+          echo "Vulkan_INCLUDE_DIR=='$VULKAN_SDK/include'"
 
-      # - name: Build wheels
-      #   uses: pypa/cibuildwheel@v2.15.0
-      #   env:
-      #     CIBW_ARCHS_MACOS: ${{ matrix.arch }}
-      #     CIBW_ARCHS_LINUX: ${{ matrix.arch }}
-      #     CIBW_ARCHS_WINDOWS: ${{ matrix.arch }}
-      #     CIBW_BUILD: ${{ matrix.build }}
-      #     CIBW_BUILD_VERBOSITY: 1
-      #     CIBW_ENVIRONMENT: CMAKE_BUILD_PARALLEL_LEVEL=2 NCNN_VULKAN='TRUE' VULKAN_SDK=='$VULKAN_SDK'
+      - name: Build wheels
+        uses: pypa/cibuildwheel@v2.15.0
+        env:
+          CIBW_ARCHS_MACOS: ${{ matrix.arch }}
+          CIBW_ARCHS_LINUX: ${{ matrix.arch }}
+          CIBW_ARCHS_WINDOWS: ${{ matrix.arch }}
+          CIBW_BUILD: ${{ matrix.build }}
+          CIBW_BUILD_VERBOSITY: 1
+          CIBW_ENVIRONMENT: |
+            CMAKE_BUILD_PARALLEL_LEVEL=2
+            NCNN_VULKAN='TRUE'
+            VULKAN_SDK=='$VULKAN_SDK'
+            Vulkan_LIBRARY=='$VULKAN_SDK/lib'
+            Vulkan_INCLUDE_DIR=='$VULKAN_SDK/include'
           
-      #   with:
-      #     package-dir: ./ncnn-python-gpu
-      #     output-dir: wheelhouse
+        with:
+          package-dir: ./ncnn-python-gpu
+          output-dir: wheelhouse
 
-      # - name: Show files
-      #   run: ls -lh wheelhouse
-      #   shell: bash
+      - name: Show files
+        run: ls -lh wheelhouse
+        shell: bash
 
-      # - name: Verify clean directory
-      #   run: git diff --exit-code
-      #   shell: bash
+      - name: Verify clean directory
+        run: git diff --exit-code
+        shell: bash
 
-      # - name: Upload wheels
-      #   uses: actions/upload-artifact@v3
-      #   with:
-      #     path: wheelhouse/*.whl
+      - name: Upload wheels
+        uses: actions/upload-artifact@v3
+        with:
+          path: wheelhouse/*.whl
         
