--- a/.github/workflows/release-python-gpu.yml
+++ b/.github/workflows/release-python-gpu.yml
@@ -72,10 +72,16 @@ jobs:
         run: |
           cd VULKAN_SDK
           ls
+          echo ''
           cd include 
           ls
-          cd ../lib
+          echo ''
+          cd share
           ls
+          echo ''
+          cd ../../lib
+          ls
+          echo ''
 
 
           
