--- a/.github/workflows/release-python-gpu.yml
+++ b/.github/workflows/release-python-gpu.yml
@@ -76,10 +76,13 @@ jobs:
           cd include 
           ls
           echo ''
-          cd share
+          cd ../share
           ls
           echo ''
-          cd ../../lib
+          cd ../lib
+          ls
+          echo ''
+          cd ../pkgconfig
           ls
           echo ''
 
