--- a/.github/workflows/release-python-gpu.yml
+++ b/.github/workflows/release-python-gpu.yml
@@ -79,12 +79,10 @@ jobs:
           cd ../share
           ls
           echo ''
-          cd ../lib
+          cd ./vulkan
           ls
           echo ''
-          cd ../pkgconfig
-          ls
-          echo ''
+ 
 
 
           
