--- a/.github/workflows/release-python-gpu.yml
+++ b/.github/workflows/release-python-gpu.yml
@@ -74,15 +74,15 @@ jobs:
           echo "Vulkan SDK Version=='$VULKAN_SDK_VERSION'"
           echo "VULKAN_SDK=='$VULKAN_SDK'"
 
-      # - name: list the vulkan dir
-      #   shell: bash
-      #   run: |
-      #     cd VULKAN_SDK
-      #     ls
-      #     echo ''
-      #     cd ./include/vulkan 
-      #     ls
-      #     echo ''
+      - name: list the vulkan dir
+        shell: bash
+        run: |
+          cd VULKAN_SDK
+          ls
+          echo ''
+          cd ./include/vulkan 
+          ls
+          echo ''
           
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.15.0
@@ -92,7 +92,7 @@ jobs:
           CIBW_ARCHS_WINDOWS: ${{ matrix.arch }}
           CIBW_BUILD: ${{ matrix.build }}
           CIBW_BUILD_VERBOSITY: 1
-          CIBW_ENVIRONMENT: CMAKE_BUILD_PARALLEL_LEVEL=2 NCNN_VULKAN='TRUE' NCNN_CI_VULKAN='TRUE' 
+          CIBW_ENVIRONMENT: CMAKE_BUILD_PARALLEL_LEVEL=2 NCNN_VULKAN='TRUE' NCNN_CI_VULKAN='TRUE'  
         with:
           package-dir: ./ncnn-python-gpu
           output-dir: wheelhouse
