--- a/.github/workflows/release-python-gpu.yml
+++ b/.github/workflows/release-python-gpu.yml
@@ -15,7 +15,7 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - { os: ubuntu-20.04, arch: x86_64,     build: 'cp*-manylinux*' }
+          - { os: ubuntu-20.04, arch: x86_64,     build: 'cp*-manylinux*' , vpath: '/home/runner/work/ncnn-gpu-pre-verification/ncnn-gpu-pre-verification/VULKAN_SDK'}
           # - { os: ubuntu-20.04, arch: x86_64,     build: 'cp*-musllinux*' }
           # - { os: ubuntu-20.04, arch: x86_64,     build: 'pp*'            }
           # - { os: ubuntu-20.04, arch: i686,       build: 'cp*-manylinux*' }
@@ -92,7 +92,7 @@ jobs:
           CIBW_ARCHS_WINDOWS: ${{ matrix.arch }}
           CIBW_BUILD: ${{ matrix.build }}
           CIBW_BUILD_VERBOSITY: 1
-          CIBW_ENVIRONMENT: CMAKE_BUILD_PARALLEL_LEVEL=2 NCNN_VULKAN=TRUE NCNN_CI_VULKAN=TRUE VULKAN_SDK='$(VULKAN_SDK)'
+          CIBW_ENVIRONMENT: CMAKE_BUILD_PARALLEL_LEVEL=2 NCNN_VULKAN=TRUE NCNN_CI_VULKAN=TRUE VULKAN_SDK=${{ matrix.vpath }}
           # CIBW_ENVIRONMENT_PASS_LINUX: 
         with:
           package-dir: ./ncnn-python-gpu
