--- a/.github/workflows/release-python-gpu.yml
+++ b/.github/workflows/release-python-gpu.yml
@@ -15,7 +15,7 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - { os: ubuntu-20.04, arch: x86_64,     build: 'cp*-manylinux*' , vpath: '/home/runner/work/ncnn-gpu-pre-verification/ncnn-gpu-pre-verification/VULKAN_SDK'}
+          - { os: ubuntu-20.04, arch: x86_64,     build: 'cp*-manylinux*' }
           # - { os: ubuntu-20.04, arch: x86_64,     build: 'cp*-musllinux*' }
           # - { os: ubuntu-20.04, arch: x86_64,     build: 'pp*'            }
           # - { os: ubuntu-20.04, arch: i686,       build: 'cp*-manylinux*' }
@@ -68,11 +68,12 @@ jobs:
           vulkan-use-cache: true
       
 
-      - name: Test Vulkan SDK Install
+      - id: verify-vulkan
+        name: Verify Vulkan SDK Install
         shell: bash
         run: |
-          echo "Vulkan SDK Version=='$VULKAN_SDK_VERSION'"
-          echo "VULKAN_SDK=='$VULKAN_SDK'"
+          echo "Vulkan SDK Version='$VULKAN_SDK_VERSION'"
+          echo "VULKAN_SDK='$VULKAN_SDK'" >> "$GITHUB_ENV"
 
       - name: list the vulkan dir
         shell: bash
@@ -92,8 +93,7 @@ jobs:
           CIBW_ARCHS_WINDOWS: ${{ matrix.arch }}
           CIBW_BUILD: ${{ matrix.build }}
           CIBW_BUILD_VERBOSITY: 1
-          CIBW_ENVIRONMENT: CMAKE_BUILD_PARALLEL_LEVEL=2 NCNN_VULKAN=TRUE NCNN_CI_VULKAN=TRUE VULKAN_SDK=${{ matrix.vpath }}
-          # CIBW_ENVIRONMENT_PASS_LINUX: 
+          CIBW_ENVIRONMENT: CMAKE_BUILD_PARALLEL_LEVEL=2 NCNN_VULKAN=TRUE NCNN_CI_VULKAN=TRUE VULKAN_SDK="$VULKAN_SDK"
         with:
           package-dir: ./ncnn-python-gpu
           output-dir: wheelhouse
