--- a/.github/workflows/release-python-gpu.yml
+++ b/.github/workflows/release-python-gpu.yml
@@ -73,7 +73,7 @@ jobs:
         shell: bash
         run: |
           echo "Vulkan SDK Version='$VULKAN_SDK_VERSION'"
-          echo "VULKAN_SDK='$VULKAN_SDK'" >> "$GITHUB_ENV"
+          echo "VULKAN_SDK='$VULKAN_SDK'" >> "$GITHUB_OUTPUT"
 
       - name: list the vulkan dir
         shell: bash
@@ -93,7 +93,7 @@ jobs:
           CIBW_ARCHS_WINDOWS: ${{ matrix.arch }}
           CIBW_BUILD: ${{ matrix.build }}
           CIBW_BUILD_VERBOSITY: 1
-          CIBW_ENVIRONMENT: CMAKE_BUILD_PARALLEL_LEVEL=2 NCNN_VULKAN=TRUE NCNN_CI_VULKAN=TRUE VULKAN_SDK=$VULKAN_SDK
+          CIBW_ENVIRONMENT: CMAKE_BUILD_PARALLEL_LEVEL=2 NCNN_VULKAN=TRUE NCNN_CI_VULKAN=TRUE VULKAN_SDK=${{steps.verify-vulkan.outputs.VULKAN_SDK}}
         with:
           package-dir: ./ncnn-python-gpu
           output-dir: wheelhouse
