--- a/.github/workflows/release-python-gpu.yml
+++ b/.github/workflows/release-python-gpu.yml
@@ -103,6 +103,15 @@ jobs:
       # - name: find pkgconfig
       #   shell: bash
       #   run: find / -name pkgconfig
+
+      - name: download vulkan
+        if: matrix.os == 'ubuntu-20.04'
+        shell: bash
+        run: |
+          cd ncnn-python-gpu
+          wget https://sdk.lunarg.com/sdk/download/1.2.189.0/linux/vulkansdk-linux-x86_64-1.2.189.0.tar.gz?Human=true -O vulkansdk-linux-x86_64-1.2.189.0.tar.gz
+          tar -xf vulkansdk-linux-x86_64-1.2.189.0.tar.gz
+
           
       - name: Build wheels
         if: matrix.os == 'ubuntu-20.04'
@@ -114,10 +123,7 @@ jobs:
           CIBW_BUILD: ${{ matrix.build }}
           CIBW_BUILD_VERBOSITY: 1
           CIBW_ENVIRONMENT: CMAKE_BUILD_PARALLEL_LEVEL=2 NCNN_VULKAN=TRUE NCNN_CI_VULKAN=FALSE # VULKAN_SDK=${{steps.verify-vulkan.outputs.VULKAN_SDK}}
-          CIBW_BEFORE_BUILD: yum install wget&&
-                             wget https://sdk.lunarg.com/sdk/download/1.2.189.0/linux/vulkansdk-linux-x86_64-1.2.189.0.tar.gz?Human=true -O vulkansdk-linux-x86_64-1.2.189.0.tar.gz&&
-                             tar -xf vulkansdk-linux-x86_64-1.2.189.0.tar.gz&&
-                             export VULKAN_SDK=$(pwd)/1.2.189.0/x86_64
+          CIBW_BEFORE_BUILD: export VULKAN_SDK=$(pwd)/1.2.189.0/x86_64
         with:
           package-dir: ./ncnn-python-gpu
           output-dir: wheelhouse
