--- a/.github/workflows/release-python-gpu.yml
+++ b/.github/workflows/release-python-gpu.yml
@@ -21,11 +21,11 @@ jobs:
           # - { os: ubuntu-20.04, arch: i686,       build: 'cp*-manylinux*' }
           # - { os: ubuntu-20.04, arch: i686,       build: 'cp*-musllinux*' }
           # - { os: ubuntu-20.04, arch: i686,       build: 'pp*'            }
-          # - { os: windows-2019, arch: x86,        build: 'cp*'            }
+          - { os: windows-2019, arch: x86,        build: 'cp38'            }
           # - { os: windows-2019, arch: AMD64,      build: 'cp*'            }
           # - { os: windows-2019, arch: AMD64,      build: 'pp*'            }
           # - { os: windows-2019, arch: ARM64,      build: 'cp*'            }
-          # - { os: macos-latest, arch: x86_64,     build: 'cp*'            }
+          # - { os: macos-latest, arch: x86_64,     build: 'cp38'            }
           # - { os: macos-latest, arch: x86_64,     build: 'pp*'            }
           # - { os: macos-latest, arch: arm64,      build: 'cp*'            }
           # - { os: macos-latest, arch: universal2, build: 'cp*'            }
@@ -60,20 +60,22 @@ jobs:
         run: |
           brew uninstall --ignore-dependencies libomp
 
-      # - name: Prepare Vulkan SDK
-      #   uses: humbletim/setup-vulkan-sdk@v1.2.0
-      #   with:
-      #     vulkan-query-version: 1.3.250.0
-      #     vulkan-components: Vulkan-Headers, Vulkan-Loader
-      #     vulkan-use-cache: true
+      - name: Prepare Vulkan SDK
+        if: matrix.os == 'windows-2019'
+        uses: humbletim/setup-vulkan-sdk@v1.2.0
+        with:
+          vulkan-query-version: 1.2.189.0
+          vulkan-components: Vulkan-Headers, Vulkan-Loader
+          vulkan-use-cache: true
       
 
-      # - id: verify-vulkan
-      #   name: Verify Vulkan SDK Install
-      #   shell: bash
-      #   run: |
-      #     echo "Vulkan_SDK_Version='$VULKAN_SDK_VERSION'" >> "$GITHUB_OUTPUT"
-      #     echo "VULKAN_SDK='$VULKAN_SDK'" >> "$GITHUB_OUTPUT"
+      - id: verify-vulkan
+        if: matrix.os == 'windows-2019'
+        name: Verify Vulkan SDK Install
+        shell: bash
+        run: |
+          echo "Vulkan_SDK_Version='$VULKAN_SDK_VERSION'" >> "$GITHUB_OUTPUT"
+          echo "VULKAN_SDK='$VULKAN_SDK'" >> "$GITHUB_OUTPUT"
 
 
       # - name: show Vulkan
@@ -128,16 +130,31 @@ jobs:
           package-dir: ./ncnn-python-gpu
           output-dir: wheelhouse
 
-      # - name: Show files
-      #   run: ls -lh wheelhouse
-      #   shell: bash
+      - name: Build wheels
+        if: matrix.os == 'windows-2019'
+        uses: pypa/cibuildwheel@v2.15.0
+        env:
+          CIBW_ARCHS_MACOS: ${{ matrix.arch }}
+          CIBW_ARCHS_LINUX: ${{ matrix.arch }}
+          CIBW_ARCHS_WINDOWS: ${{ matrix.arch }}
+          CIBW_BUILD: ${{ matrix.build }}
+          CIBW_BUILD_VERBOSITY: 1
+          CIBW_ENVIRONMENT: CMAKE_BUILD_PARALLEL_LEVEL=2 NCNN_VULKAN=TRUE NCNN_CI_VULKAN=FALSE VULKAN_SDK=${{steps.verify-vulkan.outputs.VULKAN_SDK}}
+          CIBW_BEFORE_BUILD: cd VULKAN_SDK&&ls&&echo ""
+        with:
+          package-dir: ./ncnn-python-gpu
+          output-dir: wheelhouse
 
-      # - name: Verify clean directory
-      #   run: git diff --exit-code
-      #   shell: bash
+      - name: Show files
+        run: ls -lh wheelhouse
+        shell: bash
 
-      # - name: Upload wheels
-      #   uses: actions/upload-artifact@v3
-      #   with:
-      #     path: wheelhouse/*.whl
+      - name: Verify clean directory
+        run: git diff --exit-code
+        shell: bash
+
+      - name: Upload wheels
+        uses: actions/upload-artifact@v3
+        with:
+          path: wheelhouse/*.whl
         
