--- a/.github/workflows/release-python-gpu.yml
+++ b/.github/workflows/release-python-gpu.yml
@@ -21,8 +21,8 @@ jobs:
           # - { os: ubuntu-20.04, arch: i686,       build: 'cp*-manylinux*' }
           # - { os: ubuntu-20.04, arch: i686,       build: 'cp*-musllinux*' }
           # - { os: ubuntu-20.04, arch: i686,       build: 'pp*'            }
-          - { os: windows-2019, arch: x86,        build: 'cp38'            }
-          # - { os: windows-2019, arch: AMD64,      build: 'cp*'            }
+          # - { os: windows-2019, arch: x86,        build: 'cp*'            }
+          - { os: windows-2019, arch: AMD64,      build: 'cp38'            }
           # - { os: windows-2019, arch: AMD64,      build: 'pp*'            }
           # - { os: windows-2019, arch: ARM64,      build: 'cp*'            }
           # - { os: macos-latest, arch: x86_64,     build: 'cp38'            }
